--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@ color:#dddddd; target="_blank" title="Instagram">
                      </span>
 </a></li>
     {% endif %}
+						 <li>
+   <a href="https://www.youtube.com/channel/UCoEaDvFaOIBIqK6K2MdHhCg/featured" style="
+color:#dddddd; target="_blank" title="Youtube">
+                       <i class="fa fa-youtube"></i>
+                     </span>
+</a></li>
                     {% if site.flickr_username %}
 						<li>
    <a href="https://flickr.com/photos/{{ site.flickr_username }}" style="
